@startuml

class Library {
    - name: String
    - books: Book[]

    + rent(item, member):boolean
    + returnItem(item)
}

abstract class Item {
    - id: String
    - rentedBy: Member
}

abstract class Book {
    - title: String
    - isbn: String
    - author: Author
}

class PaperBook {
    - pages: int
}

class AudioBook {
    - length: int
}

class Movie {
    - title: String
}

class Author {
    - name: String
}

class Member {
    - number: int
    - name: String
}

Book --|> Item
PaperBook --|> Book
AudioBook --|> Book
Movie --|> Item

@enduml